--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "Build";
+      var buildUrl = "https://pub-6d818a45fe3f472a902167e3b2f65063.r2.dev/Build";
       var loaderUrl = buildUrl + "/1.loader.js";
       var config = {
         dataUrl: buildUrl + "/1.data",
