--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1600 height=1024></canvas>
+      <canvas id="unity-canvas" width=1920 height=1080></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -55,18 +55,60 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "https://pub-6d818a45fe3f472a902167e3b2f65063.r2.dev/Build";
+      var buildUrl = "Build";
       var loaderUrl = buildUrl + "/1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/1.data",
-        frameworkUrl: buildUrl + "/1.framework.js",
-        codeUrl: buildUrl + "/1.wasm",
+        dataUrl: buildUrl + "/1.data.unityweb",
+        frameworkUrl: buildUrl + "/1.framework.js.unityweb",
+        codeUrl: buildUrl + "/1.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ChuNengGuiMoHua",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
+
+
+
+// 分片列表（按上传顺序列出所有 .data 分片）
+var dataParts = [
+    buildUrl + "/1.data.part0.unityweb",
+    buildUrl + "/1.data.part1.unityweb",
+    buildUrl + "/1.data.part2.unityweb"
+    // 依次添加所有分片
+];
+
+// 分片下载并合并函数
+async function loadDataUnityweb(parts) {
+    let totalLength = 0;
+    let buffers = [];
+
+    for (let i = 0; i < parts.length; i++) {
+        unityShowBanner("Loading data part " + (i+1) + "/" + parts.length, "warning");
+        const response = await fetch(parts[i]);
+        if (!response.ok) throw new Error("Failed to load " + parts[i]);
+        const arrayBuffer = await response.arrayBuffer();
+        buffers.push(arrayBuffer);
+        totalLength += arrayBuffer.byteLength;
+    }
+
+    // 合并
+    const merged = new Uint8Array(totalLength);
+    let offset = 0;
+    for (let buf of buffers) {
+        merged.set(new Uint8Array(buf), offset);
+        offset += buf.byteLength;
+    }
+
+    const blob = new Blob([merged], { type: 'application/octet-stream' });
+    return URL.createObjectURL(blob);
+}
+
+
+
+
+
+
 
       // By default Unity keeps WebGL canvas render target size matched with
       // the DOM size of the canvas element (scaled by window.devicePixelRatio)
@@ -93,26 +135,45 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1600px";
-        canvas.style.height = "1024px";
+        canvas.style.width = "1920px";
+        canvas.style.height = "1080px";
       }
 
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
       script.src = loaderUrl;
-      script.onload = () => {
+script.onload = async () => {
+    try {
+        // 下载并合并 .data 分片
+        const dataUrl = await loadDataUnityweb(dataParts);
+
+        // 配置 Unity Loader
+        var config = {
+            dataUrl: dataUrl, // 这里使用合并后的 Blob URL
+            frameworkUrl: buildUrl + "/1.framework.js.unityweb",
+            codeUrl: buildUrl + "/1.wasm.unityweb",
+            streamingAssetsUrl: "StreamingAssets",
+            companyName: "DefaultCompany",
+            productName: "ChuNengGuiMoHua",
+            productVersion: "0.1",
+            showBanner: unityShowBanner,
+        };
+
         createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
+            progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
+            loadingBar.style.display = "none";
+            fullscreenButton.onclick = () => { unityInstance.SetFullscreen(1); };
         }).catch((message) => {
-          alert(message);
+            alert(message);
         });
-      };
+
+    } catch(e) {
+        alert("Error loading Unity data: " + e);
+    }
+};
+
       document.body.appendChild(script);
     </script>
   </body>
