--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
 // 分片列表（按上传顺序列出所有 .data 分片）
 var dataParts = [
-    buildUrl + "/1.data.part0.unityweb",
-    buildUrl + "/1.data.part1.unityweb",
-    buildUrl + "/1.data.part2.unityweb"
+    buildUrl + "/1.data.part0",
+    buildUrl + "/1.data.part1",
+    buildUrl + "/1.data.part2"
     // 依次添加所有分片
 ];
 
