--- a/index.html
+++ b/index.html
@@ -143,11 +143,31 @@ async function loadDataUnityweb(parts) {
 
       var script = document.createElement("script");
       script.src = loaderUrl;
+
+
+// 页面加载完成后立即显示弹窗
+document.addEventListener('DOMContentLoaded', function() {
+    alert("资源加载较慢，请耐心等待！");
+});
+
+// 备用方案：如果DOMContentLoaded已经触发
+if (document.readyState === 'loading') {
+    document.addEventListener('DOMContentLoaded', function() {
+        alert("资源加载较慢，请耐心等待！");
+    });
+} else {
+    // DOM已经加载完成
+    alert("资源加载较慢，请耐心等待！");
+}
+
+
+
+
       script.onload = async () => {
           try {
 
               // 【添加】开始加载时的弹窗提示
-              alert("因服务器原因第一次资源下载较慢，请您耐心等待！");
+              //alert("因服务器原因第一次资源下载较慢，请您耐心等待！");
 
               // 下载并合并 .data 分片
               const dataUrl = await loadDataUnityweb(dataParts);
