--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('loading-background.jpg'); /* 替换为你的背景图片路径 */
+            background-image: url('loading-background.png'); /* 替换为你的背景图片路径 */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
